syntax = "proto3";
option go_package="./serviceapb";

package serviceapb;

service ServiceA {
  rpc Ping(PingRequest) returns (PingResponse) {}
}

message PingRequest {
  string name = 1;
}

message PingResponse {
  string out = 1;
}
