syntax = "proto3";
option go_package="./servicebpb";

package servicebpb;

service ServiceB {
  rpc Pong(PongRequest) returns (PongResponse) {}
}

message PongRequest {
  string message = 1;
}

message PongResponse {
  string out = 1;
}
